--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,11 @@
 * {
-    outline: 1px  #47b4b4 solid;
+    outline: 1px  #121313 solid;
 }
+body {
+    background-color: rgb(230, 159, 72);
+}
+
 p {
-    color: red;
+    color: rgb(202, 29, 29);
 }
 
